--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   },
   "homepage": "https://github.com/7minutech/Registration_Desk#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "install": "^0.13.0",
+    "npm": "^11.6.1",
     "sqlite3": "^5.1.7"
   }
 }
